# basis-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  README.tpl  deny.toml
.github/workflows/: ci.yml
basis/: Cargo.toml
basis-sys/: Cargo.toml  bindgen.sh  build.rs
basis-sys/src/: basisrs_interface.cpp  basisrs_interface.hpp  bindings.rs  lib.rs
basis/benches/: transcode.rs
basis/src/: error.rs  lib.rs
basis/tests/: load_transcode.rs
etc/: cat_etc1s.basis
