[package]
name = "basis-sys"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "Raw rust bindings to the basis_universal texture transcoder"
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/basis-rs"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = []
categories = []
links = "basisu"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }
