[package]
name = "basis"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"
description = "Rust bindings to the basis_universal texture transcoder"
readme = "../README.md"
repository = "https://github.com/BVE-Reborn/basis-rs"
license = "MIT OR Apache-2.0 OR Zlib"
keywords = []
categories = []

[dependencies]
basis-sys = { version = "0.1.0", path = "../basis-sys" }
once_cell = "1"

[dev-dependencies]
ddsfile = "0.4"
